fixed 401 (dual ref to id='password')

--- a/client/index.html
+++ b/client/index.html
@@ -57,7 +57,7 @@
   </div>
 
   <!-- Register user -->
-  <div id="register" class="main" style="display: none">
+<!--   <div id="register" class="main" style="display: none">
     <h3>Register</h3>
     <div>
       <label>First Name:</label>
@@ -83,7 +83,7 @@
       <button id="register">Save</button>
       <span class="saved" style="display: none">Saved!</span>
     </div>
-  </div>
+  </div> -->
 
   <!-- List all -->
   <div id="list_all" class="main" style="display: none">
@@ -93,17 +93,18 @@
   <!-- Login -->
   <div id="login" class="main" style="display: none">
     <h3>Login</h3>
-    Email:<br>
-    <input type="text" id="loginEmail" name="email">
-    <br>
-    Password:<br>
-    <input type="password" id="password" name="password">
-    <br><br>
-    <button id="loginNow">Login</button>
-
-    <p id="loginInfo">jgewud</p>
-
-
+    <div>
+      <label>Email:</label>
+      <input type="text" id="loginEmail" name="email">
+    </div>
+    <div>
+      <label>Password:</label>
+      <input type="password" id="password" name="password">
+    </div>
+    <div>
+      <button id="loginNow">Login</button>
+      <p id="loginInfo">jgewud</p>
+    </div>
   </div>
 
   <!-- Find -->
