Fixed async problem fetching name of FROM on LIST ALL

--- a/client/index.html
+++ b/client/index.html
@@ -27,12 +27,12 @@
   <div id="create_new" class="main" style="display: none">
     <h3>Create new</h3>
     <div>
-      <label>FROM (until session):</label>
+      <label>FROM:</label>
       <input id="sender" type="text" name="sender" value="557a0acb5882524e6a621195" required="true">
     </div>
     <div>
-      <label>TO (until auth):</label>
-      <input id="recipient" type="text" name="recipient" value="557a136c7ec4c0ab6a742f39" required="true">
+      <label>TO:</label>
+      <input id="recipient" type="text" name="recipient" placeholder="(need to validate username)" required="true">
     </div>
     <div>
       <label>Message:</label>
