--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,14 @@
   <title>Word</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="./application.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+  <script src="./userPosition.js"></script>
 </head>
 <body>
   <h1>Word on the Street</h1>
+
+  <div id="map" style="height: 200px; width: 400px; margin: 0px; padding: 0px">map</div>
+  <hr>
 
   <div id="navbar">
     <button id="b_create_new">Create new</button>
