--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,7 @@
     <button id="b_find" disabled>Find</button>
     <button id="b_delete">Delete</button>
     <button id="b_login">Login</button>
+    <button id="b_register">Create Account</button>
     <button id="b_logout" style="display: none">Logout</button>
   </div>
 
@@ -59,33 +60,33 @@
   </div>
 
   <!-- Register user -->
-<!--   <div id="register" class="main" style="display: none">
+  <div id="register" class="main" style="display: none">
     <h3>Register</h3>
     <div>
       <label>First Name:</label>
-      <input id="firstname" type="text" name="firstname" placeholder="first" required="true">
+      <input id="regFirstname" type="text" name="firstname" placeholder="first" required="true">
     </div>
     <div>
       <label>Last Name:</label>
-      <input id="lastname" type="text" name="lastname" placeholder="last" required="true">
+      <input id="regLastname" type="text" name="lastname" placeholder="last" required="true">
     </div>
     <div>
       <label>Email:</label>
-      <input id="email" type="email" name="email" placeholder="email" required="true">
+      <input id="regEmail" type="email" name="email" placeholder="email" required="true">
     </div>
     <div>
       <label>Username:</label>
-      <input id="username" type="text" name="username" placeholder="@user" required="true">
+      <input id="regUsername" type="text" name="username" placeholder="@user" required="true">
     </div>
     <div>
       <label>Password:</label>
-      <input id="password" type="password" name="password" placeholder="password" required="true">
+      <input id="regPassword" type="password" name="password" placeholder="password" required="true">
     </div>
     <div>
-      <button id="register">Save</button>
+      <button id="regSubmit">Save</button>
       <span class="saved" style="display: none">Saved!</span>
     </div>
-  </div> -->
+  </div>
 
   <!-- List all -->
   <div id="list_all" class="main" style="display: none">
@@ -101,14 +102,14 @@
     </div>
     <div>
       <label>Password:</label>
-      <input type="password" id="password" name="password">
+      <input type="password" id="loginPassword" name="password">
     </div>
     <div>
       <button id="loginNow">Login</button>
     </div>
   </div>
 
-    <!-- Login -->
+  <!-- Logout -->
   <div id="logout" class="main" style="display: none">
     <p>Logout successful (maybe :P)</p>
 
