registation update - better ids, better flow

--- a/client/index.html
+++ b/client/index.html
@@ -83,7 +83,7 @@
       <input id="regPassword" type="password" name="password" placeholder="password" required="true">
     </div>
     <div>
-      <button id="regSubmit">Save</button>
+      <button id="register_submit">Save</button>
       <span class="saved" style="display: none">Saved!</span>
     </div>
   </div>
