Register auto-logs in

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
     <button id="nav_find" disabled>Find</button>
     <button id="nav_delete">Delete</button>
     <button id="nav_login">Login</button>
-    <button id="nav_register">Create Account</button>
+    <button id="nav_register">Register</button>
     <button id="nav_logout" style="display: none">Logout</button>
   </div>
 
@@ -27,7 +27,7 @@
 
   <!-- Only on startup -->
   <div id="div_welcome" class="view">
-    <p id="status">Welcome. Please login.</p>
+    <p id="status">Welcome. Please login (or register).</p>
   </div>
 
   <!-- Drop pin -->
@@ -107,7 +107,7 @@
       <input id="regPassword" type="password" name="password" placeholder="password" required="true">
     </div>
     <div>
-      <button id="register_submit">Save</button>
+      <button id="register_submit">Register</button>
       <span class="saved" style="display: none">Saved!</span>
     </div>
   </div>
