hide & show relevant buttons in navbar on login/logout

--- a/client/index.html
+++ b/client/index.html
@@ -14,10 +14,10 @@
 
   <!-- Navbar -->
   <div id="navbar">
-    <button id="nav_drop">Drop</button>
-    <button id="nav_explore">Explore</button>
-    <button id="nav_find" disabled>Find</button>
-    <button id="nav_delete">Delete</button>
+    <button id="nav_drop" style="display: none">Drop</button>
+    <button id="nav_explore" style="display: none">Explore</button>
+    <button id="nav_find" style="display: none" disabled>Find</button>
+    <button id="nav_delete" style="display: none">Delete</button>
     <button id="nav_login">Login</button>
     <button id="nav_register">Register</button>
     <button id="nav_logout" style="display: none">Logout</button>
