--- a/client/index.html
+++ b/client/index.html
@@ -35,7 +35,7 @@
     <h3>Drop</h3>
     <div>
       <label>To:</label>
-      <input id="recipient" type="text" name="recipient" placeholder="(need to validate username)" required="true">
+      @<input id="recipient" type="text" name="recipient" placeholder="username" required="true">
     </div>
     <div>
       <label>Message:</label>
@@ -92,7 +92,7 @@
     </div>
     <div>
       <label>Username:</label>
-      <input id="regUsername" type="text" name="username" placeholder="@user" required="true">
+      @<input id="regUsername" type="text" name="username" placeholder="user" required="true">
     </div>
     <div>
       <label>Password:</label>
