cleaned up 'pin' to 'pinType' as per Jody + changed single line if/else on red/yellow pin icon to a ternary

--- a/client/index.html
+++ b/client/index.html
@@ -35,15 +35,15 @@
     <h3>Drop</h3>
     <div>
       <label>To:</label>
-      @<input id="recipient" type="text" name="recipient" placeholder="username" required="true">
+      @<input id="recipient" type="text" placeholder="username" required="true">
     </div>
     <div>
       <label>Message:</label>
-      <input id="message" type="text" name="message" placeholder="write msg here..." required="true">
+      <input id="message" type="text" placeholder="write msg here..." required="true">
     </div>
     <div>
       <label>Type:</label>
-      <input id="type" type="text" name="type" value="private" required="true">
+      <input id="pinType" type="text" value="private" required="true">
     </div>
     <div>
       <button id="drop">Drop</button>
@@ -80,23 +80,23 @@
     <h3>Register</h3>
     <div>
       <label>First Name:</label>
-      <input id="regFirstname" type="text" name="firstname" placeholder="first" required="true">
+      <input id="regFirstname" type="text" placeholder="first" required="true">
     </div>
     <div>
       <label>Last Name:</label>
-      <input id="regLastname" type="text" name="lastname" placeholder="last" required="true">
+      <input id="regLastname" type="text" placeholder="last" required="true">
     </div>
     <div>
       <label>Email:</label>
-      <input id="regEmail" type="email" name="email" placeholder="email" required="true">
+      <input id="regEmail" type="email" placeholder="email" required="true">
     </div>
     <div>
       <label>Username:</label>
-      @<input id="regUsername" type="text" name="username" placeholder="user" required="true">
+      @<input id="regUsername" type="text" placeholder="user" required="true">
     </div>
     <div>
       <label>Password:</label>
-      <input id="regPassword" type="password" name="password" placeholder="password" required="true">
+      <input id="regPassword" type="password" placeholder="password" required="true">
     </div>
     <div>
       <button id="register_submit">Register</button>
