Pin details only available when within range (but auto-showing when user should still have to click)

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,8 @@
   <!-- Navbar -->
   <div id="navbar">
     <button id="nav_drop" style="display: none">Drop</button>
-    <button id="nav_explore" style="display: none">Explore</button>
+    <!-- if re-enabling, uncomment 'renderPins();' in userPosition.js -->
+    <button id="nav_explore" style="display: none" disabled>Explore</button>
     <button id="nav_delete" style="display: none">Delete</button>
     <button id="nav_login">Login</button>
     <button id="nav_register">Register</button>
