--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -12,23 +12,21 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&amp;sensor=true"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-    <script src="cordova.js"></script>
+    <!-- <script src="cordova.js"></script> -->
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
     
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
-
-
   </head>
 
   <body ng-app="starter" ng-controller="MapCtrl">
-  <ion-nav-bar class="bar-stable">
-    <h1 class="title">Word on the Street</h1>
-    <ion-nav-back-button>Back</ion-nav-back-button>
-  </ion-nav-bar>
-  <ion-nav-view></ion-nav-view>
+    <ion-nav-bar class="bar-stable">
+      <h1 class="title">Word on the Street</h1>
+      <ion-nav-back-button>Back</ion-nav-back-button>
+    </ion-nav-bar>
+    <ion-nav-view></ion-nav-view>
   </body>
 
 </html>
