--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -31,8 +31,8 @@
           <button class="button button-icon button-clear ion-navicon" menu-toggle="left" disabled></button>
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
-          <a hng-click="openModal(2)" id="nav_register" class="button button-icon icon ion-person-add" disabled>Register</a>
-          <a ng-click="openModal(1)" id="nav_login" class="button button-icon icon ion-log-in">Login</a>
+          <a ng-click="openModal(1)" id="nav_register" class="button button-icon icon ion-person-add">Register</a>
+          <a ng-click="openModal(2)" id="nav_login" class="button button-icon icon ion-log-in">Login</a>
           <a ng-click="logout()" id="nav_logout" class="button button-icon icon ion-log-out" style="display: none">Logout</a>
         </ion-nav-buttons> 
 
@@ -40,11 +40,43 @@
       </ion-view>
     </script>
     
-    <script id="modal.html" type="text/ng-template">
+    <script id="modal1.html" type="text/ng-template">
+      <div class="modal">
+        <ion-header-bar>
+          <h1 class="title">REGISTER</h1>
+          <button class="button button-clear button-primary" ng-click="closeModal(1)">Cancel</button>
+        </ion-header-bar>
+          <ion-content>
+              <div class="list">
+                <label class="item item-input">
+                  <input type="text" placeholder="First" id="regFirstname">
+                </label> 
+                <label class="item item-input">
+                  <input type="text" placeholder="Last" id="regLastname">
+                </label> 
+                <label class="item item-input">
+                  <input type="text" placeholder="username" id="regUsername">
+                </label> 
+                <label class="item item-input">
+                  <input type="text" placeholder="email" id="regEmail">
+                </label> 
+                <label class="item item-input">
+                  <input type="password" placeholder="password" id="regPassword">
+                </label> 
+              </div>
+              <button class="button button-block button-positive" ng-click="register()">
+                Create Account
+              </button>
+            </ion-content>
+        </ion-content>
+      </div>
+    </script>
+
+    <script id="modal2.html" type="text/ng-template">
       <div class="modal">
         <ion-header-bar>
           <h1 class="title">LOGIN</h1>
-          <button class="button button-clear button-primary" ng-click="modal.hide()">Cancel</button>
+          <button class="button button-clear button-primary" ng-click="closeModal(2)">Cancel</button>
         </ion-header-bar>
         <ion-content>
           <div class="list">
@@ -56,7 +88,7 @@
             </label>
           </div>
 
-          <button class="button button-block button-positive" ng-click="login()">
+          <button class="button button-block button-positive" ng-click="loginButton()">
             Login
           </button>
 
