--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -18,7 +18,7 @@
     <script src="js/main.js"></script>
   </head>
 
-  <body ng-controller="MapCtrl">
+  <body>
     
     <ion-side-menus>
       <ion-nav-bar class="bar-stable"></ion-nav-bar>
