--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -144,7 +144,7 @@
         </ion-header-bar>
         <ion-content>
           <ion-list>
-            <ion-item class="item-remove-animate item-avatar" ng-repeat="pin in pins" type="item-text-wrap" href="#/tab/pins/{{pin.id}}">
+            <ion-item class="item-remove-animate item-avatar" ng-repeat="pin in pins" type="item-text-wrap" ng-click="goToPinPopUp({{pin}})" href="#">
               <img ng-src="{{pin.face}}">
               <h2>{{pin.message}}</h2>
               <p>{{pin.senderName}}</p>
