reverted tolowercase on input back as css text-transform does not work well...

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -59,10 +59,10 @@
                   <input type="text" placeholder="Last" id="regLastname">
                 </label> 
                 <label class="item item-input">
-                  <input type="text" class="lowercase" placeholder="username" id="regUsername">
+                  <input type="text" placeholder="username" id="regUsername">
                 </label> 
                 <label class="item item-input">
-                  <input type="text" class="lowercase" placeholder="email" id="regEmail">
+                  <input type="text" placeholder="email" id="regEmail">
                 </label> 
                 <label class="item item-input">
                   <input type="password" placeholder="password" id="regPassword">
@@ -86,7 +86,7 @@
           <form>
             <div class="list">
               <label class="item item-input">
-                <input type="text" class="lowercase" placeholder="Email" id="loginEmail" required="true">
+                <input type="text" placeholder="Email" id="loginEmail" required="true">
               </label>
               <label class="item item-input">
                 <input type="password" id="loginPassword" placeholder="Password" required="true">
@@ -111,7 +111,7 @@
           <form>
             <div class="list">
               <label class="item item-input">
-                <input type="text" class="lowercase" placeholder="username" id="recipient" required>
+                <input type="text" placeholder="username" id="recipient" required>
               </label>
               <label class="item item-input">
                 <textarea placeholder="Message..." rows="5" id="message" required></textarea>
