special loading page for you guys ;)

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -26,7 +26,7 @@
       <ion-nav-view></ion-nav-view>
     </ion-side-menus>
     
-    <script id="home.html" type="text/ng-template">
+    <script id="home.html" type="text/ng-template" defer>
       <ion-view>
         <ion-nav-buttons side="left">
           <a ng-click="openModal(3)" id="nav_drop" class="button button-icon icon ion-location" style="display: none">Drop Pin</a>
