--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -32,6 +32,7 @@
           <a ng-click="openModal(3)" id="nav_drop" class="button button-icon icon ion-location" style="display: none">Drop Pin</a>
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
+          <a ng-click="centerCurrentLocation()" id="nav_center_loc" class="button button-icon icon ion-android-locate" style="display: none"></a>
           <a ng-click="openModal(4)" id="nav_explore" class="button button-icon icon ion-social-buffer" style="display: none">Explore</a>
           <a ng-click="openModal(1)" id="nav_register" class="button button-icon icon ion-person-add">Register</a>
           <a ng-click="openModal(2)" id="nav_login" class="button button-icon icon ion-log-in">Login</a>
