getting all ben's changes to dev

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -154,7 +154,7 @@
     </script> 
     
     <ion-footer-bar class="bar-subfooter">
-      <div id="pin_list">Welcome. Please login.</div> 
+      <div id="pin_list">Welcome. Your map will arrive shortly.</div> 
     </ion-footer-bar>
 
     <ion-footer-bar class="bar-stable">
