Explore & Factory/Services disabled

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -16,7 +16,7 @@
 
     <!-- your app's js -->
     <script src="js/main.js"></script>
-    <script src="js/services.js"></script>
+    <!-- <script src="js/services.js"></script> -->
   </head>
 
   <body>
