--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -116,18 +116,8 @@
               <label class="item item-input">
                 <textarea placeholder="Message..." rows="5" id="message" required></textarea>
               </label>
-
-              <li class="item item-toggle">
-                Private
-                <label class="toggle toggle-assertive">
-                  <input type="checkbox" id="type">
-                  <div class="track">
-                    <div class="handle"></div>
-                  </div>
-                </label>
-              </li>
+              <ion-toggle ng-model="pinType.checked" ng-change="pinTypeChange()"><div id="pinType">Private</div></ion-toggle>        
             </div>
-
             <button class="button button-block button-positive" ng-click="dropPin()">
               Drop Pin
             </button>
