--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -117,7 +117,7 @@
                 <textarea placeholder="Message..." rows="5" id="message" required></textarea>
               </label>
               <ion-toggle ng-model="pinType.checked" ng-change="pinTypeChange()"><div id="pinType">Private</div></ion-toggle>
-              <ion-toggle ng-model="pinHidden.checked" ng-change="pinHiddenChange()"><div id="pinHidden">Hidden</div></ion-toggle>        
+              <ion-toggle ng-model="pinVisibility.checked" ng-change="pinHiddenChange()"><div id="pinVisibility">Discovered</div></ion-toggle>        
             </div>
             <button class="button button-block button-positive" ng-click="dropPin()">
               Drop Pin
