changed explore pins images

--- a/ionic/www/index.html
+++ b/ionic/www/index.html
@@ -139,7 +139,7 @@
             <ion-item class="item-remove-animate item-avatar" ng-repeat="pin in pins" type="item-text-wrap" ng-click="exploreToPinPopUp(pin)" href="#">
               <img ng-src={{pin.pic}}>
               <h2>{{pin.message}} <span class="explorePinType">[{{pin.type}} {{pin.status}}]</span></h2>
-              <p> - {{pin.wUser.firstname}}   ({{pin.dist}} m)</p>
+              <p>{{pin.wUser.firstname}}   ({{pin.dist}} m)</p>
             </ion-item>
           </ion-list>
         </ion-content>
